syntax = "proto3";

package schema;

message EntryAdded {
  string id = 1; //{block-number}-{tx-hash}-{log-index}
  string index = 2;
  string uri = 3;
  string author = 4;
  string space = 5;
}

message EntriesAdded {
  repeated EntryAdded entries = 1;
}

enum Role {
  NULL_ROLE = 0;
  MODERATOR = 1;
  MEMBER = 2;
  ADMIN = 3;
}

message RoleChange {
  oneof change {
    RoleGranted granted = 1;
    RoleRevoked revoked = 2;
  }
}

message RoleChanges {
  repeated RoleChange changes = 1;
}

message RoleGranted {
  string id = 1;
  Role role = 2;
  string account = 3;
  string sender = 4;
  string space = 5;
}

message RolesGranted {
  repeated RoleGranted roles = 1;
}

message RoleRevoked {
  string id = 1;
  Role role = 2;
  string account = 3;
  string sender = 4;
  string space = 5;
}

message RolesRevoked {
  repeated RoleRevoked roles = 1;
}

message GeoOutput {
  repeated EntryAdded entries = 1;
  repeated RoleChange role_changes = 2;
}